# spice-level-detection

./: .gitignore  README.md  pyproject.toml
spice_level_detection/: __init__.py  bg_utils.py  bound_box.py  container_alignment.py  qr_code.py  rotate_im.py  spice_detection.py
